--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=./ ",
     "preview": "vite preview",
-    "deploy": "npm run build&&gh-pages -d build"
+    "deploy": "npm run build --base=./ &&gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
